# api/controller/sysAdmin.go
@@ -20,3 +20,16 @@ func Login(c *gin.Context) {
 	_ = c.BindJSON(&dto)
 	service.SysAdminService().Login(c, dto)
 }
+
+// CreateSysAdmin 创建用户
+// @Summary 创建用户接口
+// @Produce json
+// @Description 创建用户接口
+// @param data body entity.AddSysAdminDto true "data"
+// @Success 200 {object} result.Result
+// @router /api/admin/add [post]
+func CreateSysAdmin(c *gin.Context) {
+	var addSysAdminDto entity.AddSysAdminDto
+	_ = c.BindJSON(&addSysAdminDto)
+	service.SysAdminService().CreateSysAdmin(c, addSysAdminDto)
+}
