# router/router.go
@@ -66,4 +66,5 @@ func register(router *gin.Engine) {
 	router.GET("/api/role/vo/list", controller.QuerySysRoleVOList)
 	router.GET("/api/role/vo/idList", controller.QueryRoleMenuIdList)
 	router.PUT("/api/role/assignPermissions", controller.AssignPermissions)
+	router.POST("/api/admin/add", controller.CreateSysAdmin)
 }
